chore: complete networking

--- a/presentation/8.networkig.md
+++ b/presentation/8.networkig.md
@@ -1,23 +1,93 @@
 # Networking
 
-8.1 Docker Networking Overview
-Bridge network
-Host network
-Overlay network (Swarm/K8s)
-Macvlan
-IPv6 support
+## Docker Networking Overview
 
-8.2 Internal Networking Mechanics
-Container DNS
-Service discovery
-Network isolation
-Port publishing vs exposing
-Name resolution in multi-container environments
+Containers are isolated by default. They cannot see each other unless connected via a network.
+
+Docker provides built-in network types and the ability to create custom networks for isolation, communication, and scaling
+
+### Docker Networks
+
+1. Bridge Network (Default)
+
+- Each container gets a private IP on the bridge subnet (default: 172.17.0.0/16).
+- Host performs NAT to allow external access.
+- Containers can communicate using container name inside the bridge network.
+
+```sh
+# Create a custom bridge
+docker network create mybridge
+
+# Run containers attached to it
+docker run -d --name app1 --network mybridge nginx
+docker run -d --name app2 --network mybridge nginx
+
+# Containers can ping each other by name
+docker exec -it app1 ping app2
+```
+
+2. Host Network
+
+- Container uses host’s network namespace.
+- No port mapping needed.
+- Performance is better (no NAT).
+
+```sh
+docker run --network host nginx
+```
+
+- No isolation from host → security risk
+- Cannot run multiple containers binding to same port
 
 ## Networking Inside Containers
 
-Network namespaces
-veth pairs
-Linux bridges & NAT (iptables)
-DNS resolution (embedded DNS)
-Routing basics inside containers
+When a container is started, it gets its own isolated network environment.
+
+Docker uses Linux kernel primitives to provide container networking, allowing isolation, communication, and external access.
+
+### Network namespaces
+
+Every container runs in its own network namespace. a network namespace provides a separate networking stack, including:
+
+- IP addresses
+- Routing tables
+- Interfaces (eth0, lo)
+- Firewall rules
+
+### veth pairs
+
+veth pairs act like a virtual wire connecting the container’s network namespace to the host (or a bridge).
+
+```txt
+container eth0 → veth pair → docker bridge → host/other container
+```
+
+### Linux bridges & NAT (iptables)
+
+Docker uses a Linux bridge (like a virtual switch) to connect containers in the same network.
+
+Default bridge: docker0 on host.
+
+NAT (iptables) allows containers to access external networks.
+
+- Containers get private IPs (172.17.0.0/16)
+- NAT maps container IP → host IP for outgoing traffic
+
+### DNS resolution (embedded DNS)
+
+### Routing basics inside containers
+
+```sh
+docker network create --subnet=192.168.5.0/24 mynet
+docker run --network mynet --rm busybox ip route
+```
+
+```txt
+Container eth0
+    │
+    ▼
+veth pair → Host bridge (docker0)
+    │
+    ├─ To other container (same bridge)
+    └─ NAT → Host → Internet
+```
