chore: complete slides

--- a/presentation/1.history.md
+++ b/presentation/1.history.md
@@ -144,12 +144,12 @@ Linux containerization was built on decades of OS-level isolation concepts. Each
 1. Linux Namespaces (2002–2007)
     Definition: Kernel feature that isolates various aspects of a process’s environment.
     Types of namespaces:
-    PID namespace: Isolates process IDs — processes in one namespace cannot see or affect others.
-    NET namespace: Isolates network interfaces, IP addresses, routing tables, and firewall rules.
-    MNT namespace: Isolates filesystem mount points.
-    IPC namespace: Isolates System V IPC objects and POSIX message queues.
-    UTS namespace: Isolates hostnames and domain names.
-    USER namespace: Maps user and group IDs, enabling rootless containers.
+    `PID` namespace: Isolates process IDs — processes in one namespace cannot see or affect others.
+    `NET` namespace: Isolates network interfaces, IP addresses, routing tables, and firewall rules.
+    `MNT` namespace: Isolates filesystem mount points.
+    `IPC` namespace: Isolates System V IPC objects and POSIX message queues.
+    `UTS` namespace: Isolates hostnames and domain names.
+    `USER` namespace: Maps user and group IDs, enabling rootless containers.
     Impact: Allowed each container to appear as a separate system, giving the illusion of a full OS environment.
 
 2. Control Groups (cgroups) (2007)
@@ -176,8 +176,8 @@ Docker introduced a new way to package, ship, and run applications by combining 
 ### The Problem Before Docker
 
 Before Docker, even with LXC or OpenVZ, developers faced:
-Complex container management (manual LXC configs).
-Lack of standard image formats; images were not portable.
+Complex container management (`manual` LXC configs).
+Lack of `standard` image formats; images were `not portable`.
 Hard-to-reproduce environments across development, testing, and production.
 VM-based deployments were heavy and slow.
 CI/CD pipelines were difficult to implement reliably.
@@ -233,7 +233,7 @@ So, OCI is A set of standards (specifications) for containers.
 
 OCI defines two primary specifications:
 
-3.1 OCI Runtime Specification (runtime-spec)
+1. OCI Runtime Specification (runtime-spec)
 Defines how a container should be started and run on any compliant runtime.
 Specifies:
 Process lifecycle
@@ -242,47 +242,13 @@ Filesystem mounting
 Hooks and lifecycle events
 Example runtime: runc implements this spec.
 
-3.2 OCI Image Specification (image-spec)
+2. OCI Image Specification (image-spec)
 Defines how container images are built, stored, and distributed.
 Includes:
 Image manifest
 Layer structure
 Metadata (e.g., creation time, author)
 Ensures images built with one tool run in any OCI-compliant runtime.
-
-### How They Work Together
-
-You type `docker run my-app`.
-
-1. Docker talks to containerd to:
-    - Pull the image
-    - Manage its layers
-    - Prepare filesystem and resources
-
-2. containerd calls runc to:
-    - Start the process
-    - Apply isolation (namespaces)
-    - Limit resources (cgroups)
-    - The container starts, fully isolated, and running your app.
-
-+---------------------+
-|       Docker CLI     |  <-- You
-+---------------------+
-          |
-          v
-+---------------------+
-|      containerd      |  <-- Manages images & lifecycle
-+---------------------+
-          |
-          v
-+---------------------+
-|        runc         |  <-- Runs container with isolation
-+---------------------+
-          |
-          v
-+---------------------+
-| Linux Kernel        |  <-- Namespaces, cgroups, overlayFS
-+---------------------+
 
 ## Impact on DevOps, CI/CD, cloud-native ecosystem
 
