--- a/presentation/3.docker.md
+++ b/presentation/3.docker.md
@@ -1,5 +1,11 @@
 # Docker
 
+## Installation
+
+```sh
+ansible-playbook playbook.yaml -i inventory.ini
+```
+
 ## How Docker Works
 
 Docker has a client-server architecture:
@@ -30,13 +36,46 @@ docker image inspect alpine:3.22.2 --format '{{json .RootFS.Layers}}' | jq
 
 ### Build, run, pull, push flow
 
+```txt
+fastapi
+uvicorn
+```
+
+```python
+from fastapi import FastAPI
+import uvicorn
+
+app = FastAPI()
+
+@app.get("/")
+def home():
+    return {"message": "Hello from inside Docker!"}
+
+if __name__ == "__main__":
+    uvicorn.run("server:app", host="0.0.0.0", port=8000, reload=False)
+```
+
 ```dockerfile
-FROM alpine:3.22.2
+# Base image
+FROM python:3.11-slim
+
+# Set working directory
 WORKDIR /app
+
+# Copy only dependency file first (for caching)
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
-CMD ["python", "app.py"]
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application
+COPY ./server.py .
+
+# Expose application port (optional; for documentation)
+EXPOSE 8000
+
+# Default command
+ENTRYPOINT ["python", "server.py"]
 ```
 
 Under the Hood:
@@ -54,19 +93,21 @@ runc sets up:
 
 ```sh
 # build image
-docker build -t myapp:latest .
+docker build -t web-server .
 
 # Inspect layers
-docker history myapp:latest
+docker history web-server:latest
 
 # Running container
-docker run -d --name mynginx -p 8080:80 nginx
+docker run -p 8000:8000 --name my-web-server -d web-server:latest
+
+curl localhost:8000
 
 # Example: see container PID namespace
-docker inspect mynginx --format '{{.State.Pid}}'
+docker inspect my-web-server --format '{{.State.Pid}}'
 
 # Inspect namespaces manually
-lsns | grep $(docker inspect xray-notls --format '{{.State.Pid}}')
+lsns | grep $(docker inspect my-web-server --format '{{.State.Pid}}')
 ```
 
 ## Docker Image Architecture & Layer Caching
@@ -75,18 +116,9 @@ lsns | grep $(docker inspect xray-notls --format '{{.State.Pid}}')
 
 Docker images are built from layers
 
-```dockerfile
-FROM python:3.12-slim
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
-CMD ["python", "app.py"]
-```
-
 Layers created:
 
-1. FROM python:3.12-slim → base image layer
+1. FROM python:3.11-slim → base image layer
 2. WORKDIR /app → metadata layer
 3. COPY requirements.txt . → adds file layer
 4. RUN pip install ... → installs dependencies layer
@@ -148,71 +180,29 @@ Inspect final image size:
 docker images
 ```
 
+## Docker BuildKit vs Classic Builder
+
+Docker originally used a classic (legacy) builder, which was simple but slow and limited.
+BuildKit is the next-generation build engine introduced to solve these limitations.
+
+Think of it like this:
+
+- Classic Builder = old single-threaded compiler
+- BuildKit = modern parallel, cached, secure build system
+
 ## Understanding the OCI Ecosystem
-
-### containerd
-
-A daemon/executable managing container lifecycle.
-
-Handles:
-
-- Pulling/pushing images
-- Snapshotting (filesystem layers)
-- Launching containers via runc
-- Used internally by Docker and Kubernetes.
-
-### runc
-
-Lightweight executable that actually starts a container.
-
-Responsibilities:
-
-- Setup namespaces (PID, NET, MNT…)
-- Setup cgroups (CPU, memory, I/O limits)
-- Launch the container process (PID 1)
-
-### CRI: Kubernetes runtime interface
-
-Kubernetes API for container runtimes.
-
-Allows Kubernetes to be runtime-agnostic:
-
-- Docker (via dockershim, deprecated)
-- containerd
-- CRI-O
-
-### CNI: networking interface
-
-Standard for connecting containers to networks.
-
-Handles:
-
-- Bridge, overlay, macvlan, etc.
-- IPAM (IP address assignment)
-- DNS & routing
-
-### ORAS: OCI registry artifacts (non-container files)
-
-OCI registry standard for storing any files, not just container images.
-
-Examples:
-
-- Helm charts
-- WASM binaries
-- SBOMs (Software Bill of Materials)
 
 ## OCI & Runtime Architecture
 
 1. OCI Image Spec
 
-Defines:
 How an image is structured
 Layers, manifests, configs
 Digest/sha256 for immutability
 All registries and runtimes follow this.
 
 2. OCI Runtime Spec
-Defines:
+
 How to launch a container
 Process lifecycle
 cgroups & namespaces configuration
@@ -220,22 +210,28 @@ JSON bundle format (config.json)
 
 3. runc (Low-Level Runtime)
 
-Executes containers using namespaces + cgroups
-Created by Docker, donated to OCI
-Very small, secure, standard
-runc = the thing that actually starts the process inside a namespace/cgroup.
+Lightweight executable that actually starts a container which executes containers using namespaces + cgroups
+
+- Created by Docker, donated to OCI
+- Very small, secure, standard
+
+Responsibilities:
+
+- Setup namespaces (PID, NET, MNT…)
+- Setup cgroups (CPU, memory, I/O limits)
+- Launch the container process (PID 1)
 
 4. containerd
 
 > It's a container runtime daemon written in Go which provides APIs for pulling images, managing snapshots, and running containers.
 
 Handles:
-Image pull/push
-Snapshotters (OverlayFS, btrfs, zfs)
-Managing containers
-Exposing gRPC API
-Supervised by Docker or used standalone
-Default runtime for Kubernetes (via CRI)
+
+- Pulling/Pushing images
+- Snapshotting (filesystem layers like OverlayFS, btrfs, zfs)
+- Launching containers via runc
+- Used internally by Docker and Kubernetes.
+- Default runtime for Kubernetes (via CRI)
 
 containerd = brains
 runc = executor
@@ -256,3 +252,47 @@ Kubernetes ↔ CRI ↔ containerd
 or
 Kubernetes ↔ CRI ↔ CRI-O
 K8s does not talk to Docker directly anymore.
+
+6. ORAS: OCI registry artifacts (non-container files)
+
+OCI registry standard for storing any files, not just container images.
+
+Examples:
+
+- Helm charts
+- WASM binaries
+- SBOMs (Software Bill of Materials)
+
+### How They Work Together
+
+You type `docker run my-app`.
+
+1. Docker daemon talks to containerd to:
+    - Pull the image
+    - Manage its layers
+    - Prepare filesystem and resources
+
+2. containerd calls runc to:
+    - Start the process
+    - Apply isolation (namespaces)
+    - Limit resources (cgroups)
+    - The container starts, fully isolated, and running your app.
+
++---------------------+
+|       Docker CLI     |  <-- You
++---------------------+
+          |
+          v
++---------------------+
+|      containerd      |  <-- Manages images & lifecycle
++---------------------+
+          |
+          v
++---------------------+
+|        runc         |  <-- Runs container with isolation
++---------------------+
+          |
+          v
++---------------------+
+| Linux Kernel        |  <-- Namespaces, cgroups, overlayFS
++---------------------+
