--- a/presentation/4.dockerfile.md
+++ b/presentation/4.dockerfile.md
@@ -4,12 +4,6 @@
 
 ### Slim base images
 
-Using smaller base images reduces:
-
-- Attack surface
-- Build time
-- Network transfer size
-
 A slim image is a version of a base image that:
 
 - Contains only the minimal OS packages needed to run the language/runtime
@@ -24,6 +18,12 @@ A slim image is a version of a base image that:
 | `python:3.12-slim`   | ~80–90 MB                                        |
 | `python:3.12-alpine` | ~10–15 MB *(but musl-based, can break binaries)* |
 ```
+
+Using smaller base images reduces:
+
+- Attack surface
+- Build time
+- Network transfer size
 
 ```dockerfile
 # bad
@@ -112,41 +112,6 @@ remove everything your app does not need
 - Remove build tools in production (golang, curl, gcc, git)
 - Don't copy the entire repo if unnecessary
 
-### Full Example
-
-```txt
-# requirements.txt
-flask==3.0.2
-```
-
-```dockerfile
-# Stage 1: Build
-FROM python:3.12-slim as builder
-WORKDIR /app
-
-# Install build dependencies
-RUN apt-get update && apt-get install -y build-essential && \
-    rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
-
-# Stage 2: Run
-FROM gcr.io/distroless/python3-debian12
-WORKDIR /app
-
-COPY --from=builder /app .
-
-# Drop privileges
-USER nonroot
-
-ENTRYPOINT ["app.py"]
-```
-
-## Dockerfile Best Practices
-
 ### Environment variables and ARGs
 
 ARG -> build time -> Common for versions, build flags
@@ -210,49 +175,36 @@ README.md
 
 ### Dockerfile commands & Best practices
 
-```dockerfile
-# Build stage
-FROM node:20.11-slim AS builder
+### Full Example
 
-WORKDIR /app
-
-# 1. Only copy files that impact installs
-COPY package*.json ./
-
-# 2. Install dependencies
-RUN npm install --production
-
-# 3. Copy rest of files
-COPY . .
-
-# Runtime stage
-FROM node:20.11-slim
-
-WORKDIR /app
-
-# 4. Non-root user
-RUN useradd -m app
-USER app
-
-# 5. Copy app from builder
-COPY --from=builder /app .
-
-# 6. Environmental variables
-ENV NODE_ENV=production
-ENV PORT=8080
-
-EXPOSE 8080
-
-# 7. Entrypoint
-ENTRYPOINT ["node", "index.js"]
+```txt
+# requirements.txt
+fastapi==0.101.1
+uvicorn==0.26.1
 ```
 
-## Docker BuildKit vs Classic Builder
+```dockerfile
+# Stage 1: Build
+FROM python:3.12-slim as builder
+WORKDIR /app
 
-Docker originally used a classic (legacy) builder, which was simple but slow and limited.
-BuildKit is the next-generation build engine introduced to solve these limitations.
+# Install build dependencies
+RUN apt-get update && apt-get install -y build-essential && \
+    rm -rf /var/lib/apt/lists/*
 
-Think of it like this:
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-- Classic Builder = old single-threaded compiler
-- BuildKit = modern parallel, cached, secure build system
+COPY . .
+
+# Stage 2: Run
+FROM gcr.io/distroless/python3-debian12
+WORKDIR /app
+
+COPY --from=builder /app .
+
+# Drop privileges
+USER nonroot
+
+ENTRYPOINT ["python", "server.py"]
+```
