--- a/presentation/10.sandbox.md
+++ b/presentation/10.sandbox.md
@@ -11,3 +11,20 @@ nsenter
 Debugging network namespaces
 Viewing layers & filesystem differences
 Debugging multi-stage builds
+
+```sh
+docker compose run sandbox sh
+
+apk update && apk add curl tar
+
+sleep 3600 &
+ps -ef
+
+go build -o cfs .
+./cfs pull alpine
+./cfs run alpine /bin/sh
+
+ps -ef
+touch hi.txt
+
+```
