chore: add ansible module

--- a/presentation/10.sandbox.md
+++ b/presentation/10.sandbox.md
@@ -6,12 +6,6 @@ docker logs
 docker inspect
 docker events
 
-9.2 Low-Level Debugging
-nsenter
-Debugging network namespaces
-Viewing layers & filesystem differences
-Debugging multi-stage builds
-
 ```sh
 docker compose run sandbox sh
 
@@ -27,4 +21,8 @@ go build -o cfs .
 ps -ef
 touch hi.txt
 
+
+docker run -it --privileged --entrypoint sh ghcr.io/mohammadne/cfs:v0.0.4
+cfs pull alpine
+cfs run alpine /bin/sh
 ```
